# arc

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  SECURITY.md  compose.yaml  findings.md  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  progress.md  render.yaml  task_plan.md  vite.config.ts  wrangler.toml  zbpack.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  access.py  agent_api_gateway.py  agent_manifest.py  agent_runtime.py  artifact_schema_validation.py  audit.py  auth.py  bootstrap.py  config.py  database.py  domain.py  e2e_server.py  evaluation_service.py  execution.py  human_tasks.py  judge_gateway.py  main.py  migrations.py  model_gateway.py  models.py  notification_dispatcher.py  notification_worker.py  runtime_security.py  scheduling.py  schemas.py  security.py  tool_runtime.py  v1_lite_seed.py  worker.py
apps/api/tests/: api_test_support.py  test_agent_api_gateway.py  test_agent_lifecycle_api.py  test_agent_runtime.py  test_agents_api.py  test_auth_api.py  test_config.py  test_data_object_definitions_api.py  test_database.py  test_deploy_compose.py  test_e2e_server.py  test_evaluation_service.py  test_evaluation_workflow_execution.py  test_evaluations_api.py  test_execution_api.py  test_execution_worker.py  test_human_task_api.py  test_human_workflow_execution.py  test_judge_gateway.py  test_membership_api.py  test_migrations.py  test_model_gateway.py  test_model_providers_api.py  test_network_security.py  (+15 more)
(+561 files in other folders)
