[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-one-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.139.2,<1",
  "argon2-cffi>=23.1,<26",
  "croniter>=6,<7",
  "tzdata>=2025,<2027",
  "httpx>=0.28,<1",
  "pydantic-settings>=2.14.2,<3",
  "sqlalchemy>=2.0.51,<3",
  "uvicorn[standard]>=0.51.0,<1",
]

[project.scripts]
arc-one-bootstrap = "app.bootstrap:main"
arc-one-worker = "app.worker:main"
arc-one-notification-worker = "app.notification_worker:main"

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.3.4,<4"]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
